# e-browser-core

./: .eslintrc.js  .gitignore  .prettierignore  BUILD.gn  CONTRIBUTING.md  DEPS  Jenkinsfile  PRESUBMIT.py  README.md  brave_paks.gni  chromium_presubmit_config.json5  package-lock.json  package.json  update_llm.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.storybook/: BUILD.gn  locale.ts  manager.js
android/: android_browser_tests.gni  brave_java_resources.gni  brave_java_sources.gni
app/: BUILD.gn  access_code_cast_strings.grdp  app_management_strings.grdp  bookmarks_strings.grdp  brave_command_ids.h  brave_exe.ver  brave_generated_resources.grd  brave_main_delegate.cc  brave_main_delegate_browsertest.cc  brave_settings_strings.grdp  brave_strings.grd  brave_strings_override.grd  certificate_manager.grdp  extensions_strings.grdp  extensions_strings_override.grdp  file_manager_strings.grdp  generate_command_metadata.py  generated_resources.grd  generated_resources_override.grd  gmc_strings.grdp  media_router_strings.grdp  nearby_share_strings.grdp  nux_strings.grdp  os_settings_search_tag_strings.grdp  os_settings_strings.grdp  os_settings_strings_override.grdp  password_manager_ui_strings.grdp  printing_strings.grdp  profiles_strings.grdp  settings_brave_strings.grdp  settings_brave_strings_override.grdp  settings_strings.grdp  settings_strings_override.grdp  shared_settings_strings.grdp  support_tool_strings.grdp  vr_strings.grdp  welcome_strings.grdp
browser/: BUILD.gn  DEPS  about_flags.cc  brave_app_controller_mac.mm  brave_browser_main_extra_parts.cc  brave_browser_main_parts.cc  brave_browser_process.h  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_content_browser_client.h  brave_content_browser_client_browsertest.cc  brave_content_browser_client_unittest.cc  brave_drm_tab_helper.cc  brave_features_internal_names.h  brave_local_state_prefs.cc  brave_prefs_browsertest.cc  brave_profile_prefs.cc  brave_scheme_load_browsertest.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc  sources.gni  update_util.cc
browser/ui/views/split_view2/: BUILD.gn  split_view2.cc  split_view2.h  split_view2_actions_observer.h  split_view2_button.cc  split_view2_button.h  split_view2_layout_manager.cc  split_view2_layout_manager.h  split_view2_separator.cc  split_view2_separator.h  split_view2_separator_delegate.h
chromium_src/chrome/installer/setup/: BUILD.gn  brave_behaviors.cc  install_worker.cc  install_worker.h  install_worker_unittest.cc  sources.gni  uninstall.cc
common/: brave_content_client_unittest.cc  brave_renderer_configuration.mojom
components/: BUILD.gn  arc_strings.grdp  autofill_payments_strings.grdp  autofill_prediction_improvements_strings.grdp  autofill_strings.grdp  browsing_data_strings.grdp  collaboration_strings.grdp  commerce_strings.grdp  components_brave_strings.grd  compose_strings.grdp  error_page_strings.grdp  facilitated_payments_strings.grdp  find_in_page_strings.grdp  heavy_ad_intervention_strings.grdp  history_clusters_strings.grdp  history_strings.grdp  management_ios_strings.grdp  management_strings.grdp  management_strings_override.grdp  new_or_sad_tab_strings.grdp  new_or_sad_tab_strings_override.grdp  ntp_tiles_strings.grdp  omnibox_pedal_ui_strings.grdp  omnibox_strings.grdp  page_info_strings.grdp  password_manager_strings.grdp  payments_strings.grdp  pdf_strings.grdp  permissions_strings.grdp  policy_strings.grdp  privacy_sandbox_chrome_strings.grdp  privacy_sandbox_strings.grdp  reset_password_strings.grdp  search_engine_choice_strings.grdp  security_interstitials_strings.grdp  security_interstitials_strings_override.grdp  send_tab_to_self_strings.grdp  site_settings_strings.grdp  ssl_errors_strings.grdp  subresource_filter_strings.grdp  (+5 more)
components/ai_combiner/: BUILD.gn  ai_combiner_constants.h  ai_combiner_helper.cc  ai_combiner_helper.h
components/ai_combiner/content/browser/: BUILD.gn  screenshotter.cc  screenshotter.h
components/ai_combiner_panel/browser/resources/: BUILD.gn  ai_combiner_panel_resources.grdp  index.html
components/aiwize_agent/: BUILD.gn  resources.grd
components/aiwize_agent/aiwize_agent/: aiwize-browser-extension.html  aiwize-browser-extension.js  background.js  content.js  manifest.json  side_panel.html
components/aiwize_agent/aiwize_agent/js/: background.js  contentScript.js  content_script.js  sidePanel.js  side_panel.js  vendor.js.LICENSE.txt
components/aiwize_agent/aiwize_agent/styles/: App.css  sidePanel.css
components/aiwize_applications/browser/resources/: BUILD.gn  aiwize_applications_resources.grdp  apps.js  index.css  index.html  index.js
components/aiwize_autopilot/: BUILD.gn  resources.grd
components/aiwize_autopilot/extension/: BUILD.gn  background.ts
components/aiwize_dashboard/browser/resources/: BUILD.gn  aiwize_dashboard_page.html  aiwize_dashboard_page.tsx  aiwize_dashboard_resources.grdp  index.css  index.html  index.js
components/aiwize_llm/: BUILD.gn  aiwize_llm_constants.h  aiwize_llm_helper.cc  aiwize_llm_helper.h  pref_names.h  pref_registry.cc  pref_registry.h
elevation_service/: README.md  sources.gni
fuzzers/: BUILD.gn
ios/: BUILD.gn
net/: BUILD.gn  sources.gni
patches/: base-BUILD.gn.patch  base-threading-thread_restrictions.h.patch  build-toolchain-win-midl.py.patch  chrome-BUILD.gn.patch  chrome-android-expectations-lint-suppressions.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-tabbed_mode-TabbedRootUiCoordinator.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-component_updater-updater_state_win.cc.patch  chrome-browser-net-system_network_context_manager.cc.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.cc.patch  chrome-browser-resources-settings-privacy_page-privacy_page.html.patch  chrome-browser-ui-BUILD.gn.patch  (+78 more)
utility/: brave_content_utility_client.cc  sources.gni
utility/importer/: chrome_importer_unittest.cc  sources.gni
(+2585 files in other folders)
