# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/utility/importer/sources.gni")

brave_utility_sources = [
  "//brave/utility/brave_content_utility_client.cc",
  "//brave/utility/brave_content_utility_client.h",
]

brave_utility_sources += brave_utility_importer_sources

brave_utility_deps = [
  "//mojo/public/cpp/bindings",
]

if (is_android) {
  brave_utility_sources += [
    "//chrome/utility/importer/bookmark_html_reader.cc",
    "//chrome/utility/importer/bookmark_html_reader.h",
  ]

  brave_utility_deps += [
    "//chrome/common/importer",
    "//chrome/common/importer:interfaces",
    "//components/favicon_base",
  ]
}

brave_utility_deps += brave_utility_importer_deps


brave_utility_public_deps = []
brave_utility_public_deps += brave_utility_importer_public_deps
