# Copyright (c) 2018 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/components/common/typescript.gni")
import("//brave/resources/brave_grit.gni")
import("//tools/grit/repack.gni")

assert(!is_android && !is_ios)

brave_grit("static_resources") {
  source = "resources.grd"
  outputs = [
    "grit/aiwize_agent_resources_map.cc",
    "grit/aiwize_agent_resources_map.h",
    "grit/aiwize_agent.h",
    "aiwize_agent_static.pak",
  ]
}

repack("resources") {
  deps = [
    ":static_resources",
  ]
  sources = [
    "$root_gen_dir/brave/components/aiwize_agent/aiwize_agent_static.pak",
  ]

  # This output repacked by brave_paks.gni
  output = "$root_gen_dir/brave/components/aiwize_agent/aiwize_agent_resources.pak"
}
