# Copyright (c) 2024 AI Wize. All rights reserved.

import("//brave/components/common/typescript.gni")
import("//brave/resources/brave_grit.gni")
import("//tools/grit/repack.gni")

assert(!is_android && !is_ios)

brave_grit("static_resources") {
  source = "resources.grd"
  outputs = [
    "grit/aiwize_autopilot_resources_map.cc",
    "grit/aiwize_autopilot_resources_map.h",
    "grit/aiwize_autopilot_resources.h",
    "aiwize_autopilot_static.pak",
  ]
}

pack_web_resources("generated_resources") {
  resource_name = "aiwize_autopilot"
  output_dir = "$root_gen_dir/brave/components/aiwize_autopilot"

  # Need wepack and GRD generation first
  deps = [ "extension:generate_aiwize_autopilot" ]
}

repack("resources") {
  deps = [
    ":generated_resources",
    ":static_resources",
  ]
  sources = [
    "$root_gen_dir/brave/components/aiwize_autopilot/aiwize_autopilot_generated.pak",
    "$root_gen_dir/brave/components/aiwize_autopilot/aiwize_autopilot_static.pak",
  ]

  # This output repacked by brave_paks.gni
  output = "$root_gen_dir/brave/components/aiwize_autopilot/aiwize_autopilot_resources.pak"
}
