# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

static_library("aiwize_llm") {
  sources = [
    "aiwize_llm_constants.h",
    "aiwize_llm_helper.h",
    "aiwize_llm_helper.cc",
    "pref_names.h",
    "pref_registry.cc",
    "pref_registry.h"
  ]

  deps = [
    "//brave/components/p3a_utils",
    "//brave/components/skus/browser",
    "//brave/components/skus/common",
    "//build:buildflag_header_h",
    "//components/pref_registry",
    "//components/prefs",
    "//components/version_info",
    "//net",
  ]
}
