# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/components/brave_vpn/common/buildflags/buildflags.gni")

assert(is_win && enable_brave_vpn)

source_set("unit_tests") {
  testonly = true
  sources = [ "install_worker_unittest.cc" ]

  deps = [
    "//base",
    "//base/test:test_support",
    "//brave/components/brave_vpn/common/buildflags:buildflags",
    "//brave/installer/util:vpn_utils",
    "//chrome/installer/setup:lib",
    "//chrome/installer/util:with_no_strings",
  ]
}
