# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# you can obtain one at http://mozilla.org/MPL/2.0/.

import("//brave/components/common/typescript.gni")
import("//ui/webui/resources/tools/generate_grd.gni")

transpile_web_ui("ai_combiner_panel_webui") {
  entry_points = [ [
        "applications",
        rebase_path("ai_combiner_panel_page.tsx"),
      ] ]
  resource_name = "ai_combiner_panel"
}

pack_web_resources("generated_resources") {
  resource_name = "ai_combiner_panel"
  output_dir = "$root_gen_dir/brave/components/ai_combiner_panel/browser/resources"
  deps = [ ":ai_combiner_panel_webui" ]
}
