# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# you can obtain one at http://mozilla.org/MPL/2.0/.

import("//brave/components/common/typescript.gni")
import("//ui/webui/resources/tools/generate_grd.gni")

transpile_web_ui("aiwize_applications_webui") {
  entry_points = [ [
        "applications",
        rebase_path("aiwize_applications_page.tsx"),
      ] ]
  resource_name = "aiwize_applications"
}

pack_web_resources("generated_resources") {
  resource_name = "aiwize_applications"
  output_dir = "$root_gen_dir/brave/components/aiwize_applications/browser/resources"
  deps = [ ":aiwize_applications_webui" ]
}
